# COMPSYS725-RFC913

./: CMakeLists.txt  README.md  build.sh  configure.sh  rsc.sh  serve.sh  test.sh  thol600.tgz
include/Common/: Addresses.h  Commands.h  FileSystemHelper.h  NetworkHeaders.h  Responses.h  SftpSocketUtil.h  StringUtil.h  User.h
resources/: users.txt
resources/Server/: big.txt
src/Client/: main.cpp
src/Common/: CMakeLists.txt  Commands.cpp  FileSystemHelper.cpp  SftpSocketUtil.cpp  StringUtil.cpp  User.cpp
src/Server/: main.cpp
tests/cdir/: insufficient_args_fails.sh  invalid_directory_fails.sh  valid_directory.sh
tests/done/: done.sh
tests/kill/: insufficient_args_fail.sh  invalid_file_fails.sh  valid_file.sh
tests/list/: different_directory.sh  insufficient_args_fails.sh  invalid_directory_fails.sh  invalid_format_fails.sh  standard_format.sh  verbose_format.sh
tests/login/: commands_invalid_before_login.sh  user_with_acct_and_no_password.sh  user_with_acct_and_password.sh
tests/name/: insufficient_args_fails.sh  invalid_file_fails.sh  valid_file_with_invalid_new_name_fails.sh  valid_file_with_valid_new_name.sh
tests/retr/: insufficient_args_fails.sh  invalid_file_fails.sh  send_valid_file.sh  stop_valid_file.sh
tests/stor/: app_on_new_file.sh  app_on_old_file.sh  insufficient_args_fails.sh  new_on_new_file.sh  new_on_old_file_fails.sh  old_on_new_file.sh  old_on_old_file.sh  stor_without_size_fails.sh
tests/type/: ascii_type.sh  binary_type.sh  continuous_type.sh  insufficient_args_fails.sh  invalid_type_fails.sh
